[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["matfonseca <mfonseca@fi.uba.ar>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pytest = "^7.1.3"
fastapi = "^0.85.0"
datadog-api-client = "^2.4.0"
uvicorn = "^0.18.3"
datadog = "^0.44.0"
datadog-log = "^1.4.1"
schedule = "^1.1.0"
APScheduler = "^3.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
